--- a/app/src/main/res/values-fr-rCA/string.xml
+++ b/app/src/main/res/values-fr-rCA/string.xml
@@ -1,2 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="app_name">AndroidLab1</string>
+    <string name="hello_message">Bonjour!</string>
+    <string name="ButtonText">Le bouton</string>
+</resources>
